<resources>
	<string name="app_name">OTGSubs</string>
	<string name="select_folder">Select Folder</string>
	<string name="build_substratum_theme">Build Substratum Theme</string>
	<string name="pick_assets_folder">Pick Assets Folder</string>
	<string name="dialog_packaging_title">Building Theme…</string>
	<string name="dialog_packaging_content">Please be patient, this might take a minute or two.</string>
	<string name="dialog_patching_title">Patching Theme…</string>
	<string name="dialog_patching_content">Please be patient, this might take a minute or two.</string>
	<string name="dialog_preparing_title">Preparing Theme…</string>
	<string name="dialog_preparing_content">Please be patient, this might take a minute or two.</string>
	<string name="dialog_extract_assets_title">Extracting Theme Assets</string>
	<string name="dialog_extract_assets_content">Processing and Extracting Resources from \'%s\'</string>
	<string name="getting_started_header">Getting Started</string>
	<string name="getting_started_sub_text">Start a new Theme from Scratch or based on an existing Substratum Theme</string>
	<string name="radio_button_new_theme">Create a new Theme</string>
	<string name="radio_button_existing_theme">Extend an existing Theme</string>
	<string name="fab_add_font">Add Font</string>
	<string name="fab_add_overlay">Add Overlay</string>
	<string name="fab_add_audio">Add Audio</string>
	<string name="fab_add_boot_animation">Add Boot Animation</string>
	<string name="menu_item_build">Build Apk</string>
	<string name="menu_item_import">Import Assets</string>
	<string name="menu_item_clean">Restore Defaults</string>
	<string name="drawer_item_packager_title">Substratum Packager</string>
	<string name="drawer_item_packager_subtitle">Compile your Theme Resources</string>
	<string name="drawer_item_patcher_title">Theme Patcher</string>
	<string name="drawer_item_patcher_subtitle">Patch an existing Theme</string>
	<string name="drawer_section_more">More</string>
	<string name="drawer_section_general">General</string>
	<string name="drawer_item_about">About</string>
	<string name="drawer_item_github">GitHub</string>
	<string name="drawer_item_settings">Settings</string>
	<string name="empty_assets_text">No %1$s specified for Theme!</string>
	<string name="drawer_header">OTGSubs</string>
	<string name="drawer_header_subtitle">Create Substratum Themes on your Device.</string>
	<string name="dialog_modify_item_title">Modify \'%1$s\'</string>
	<string name="dialog_rename_file_title">Rename \'%1$s\'</string>
	<string name="dialog_color_chooser_title">Select a Color</string>
	<string name="activity_patcher_title">OTGSubs: Theme Patcher</string>
	<string name="patcher_btn_primary_dark_color">Primary Dark Color (%1$s)</string>
	<string name="patcher_btn_primary_color">Primary Color (%1$s)</string>
	<string name="patcher_btn_color">%1$s (%2$s)</string>
	<string name="dialog_name_title">Enter a Name</string>
	<string name="dialog_name_content">Give your Color-Schema a Name which you\'ll then see inside Substratum!</string>
	<string name="dialog_info_no_compatible_theme_title">No compatible Theme</string>
	<string name="dialog_info_no_compatible_theme_content">It seems like you don\'t have any Theme installed that supports OTGSubs!\nContact your Theme Developer and request OTGSubs in order
		to be able to use this Feature.</string>
	<string name="notification_otgsubs_theme_found_title">OTGSubs Compatible Theme Found!</string>
	<string name="notification_otgsubs_theme_found_summary">\'%1$s\' is compatible with OTGSubs</string>
</resources>
